# odooai

./: .env.example  .gitignore  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ESCALATION.md  GLOSSARY.md  LICENSE  MANIFESTO.md  Makefile  OKRs.md  ONBOARDING.md  PROCESS.md  PROJECT.md  README.md  README_GETTING_STARTED.md  SECURITY.md  SESSION_STATE.md  WORKFLOW.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
agents/: HIERARCHY.md  TEAM.md
budget/: README.md  budget-tracker.md
business/: competitive-intel-prodooctivity.md  competitive-matrix-mondial.md  cost-model-v1.md  design-brief.md  guide-utilisateur-5min.md  knowledge-base-v1.md  legal-lgpl-question.md  pitch-and-personas.md  privacy-policy-draft.md
decisions/: ADR-001-business-catchup.md  README.md
docs/: TEMPLATES.md  cost-forecasting.md  haiku-vs-sonnet-comparison.md  i18n-audit.md  i18n-strategy.md  latency-benchmark.md  query-audit.md  resilience-tests.md  responsive-audit.md
frontend/: Dockerfile  design-tokens.md  package-lock.json  package.json  tailwind.config.ts
hr/: assignation-complete-sprint4.md  assignation-sous-utilises.md  cellule-rnd.md  daily-checklist-template.md  demo-ciblee-plan.md  kpis-individuels.md  milestones-qualite.md  sondage-wellbeing-001.md  sprint4-execution-tracker.md
incidents/: README.md
learning/: 05-sales-cold-outreach-saas.md  11-knowledge-graph-optimization.md  17-customer-onboarding-patterns.md  24-rate-limiting-fastapi.md  26-soc-monitoring-saas.md  27-design-system-chat.md  README.md  (+7 more)
(+401 files in other folders)
