[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odooai"
version = "0.1.0"
description = "AI Business Analyst that has read every line of Odoo source code."
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "redis>=5.2",
    "httpx>=0.28",
    "anthropic>=0.43",
    "structlog>=24.4",
    "cryptography>=44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "bandit>=1.8",
]
prod = [
    "asyncpg>=0.30",
    "gunicorn>=23.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["odooai"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
